--- a/SHADER_SOURCE/SHADER_SOURCE.vcxitems.filters
+++ b/SHADER_SOURCE/SHADER_SOURCE.vcxitems.filters
@@ -1,13 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <FxCompile Include="$(MSBuildThisFileDirectory)Default.hlsl" />
+    <FxCompile Include="$(MSBuildThisFileDirectory)Bloom.hlsl" />
     <FxCompile Include="$(MSBuildThisFileDirectory)DebugShader.hlsl" />
     <FxCompile Include="$(MSBuildThisFileDirectory)Grid.hlsl" />
     <FxCompile Include="$(MSBuildThisFileDirectory)Sprite.hlsl" />
     <FxCompile Include="$(MSBuildThisFileDirectory)TrailShader.hlsl" />
     <FxCompile Include="$(MSBuildThisFileDirectory)TestCompute.hlsl" />
     <FxCompile Include="$(MSBuildThisFileDirectory)RangeExtractTest.hlsl" />
+    <FxCompile Include="$(MSBuildThisFileDirectory)Rect.hlsl" />
+    <FxCompile Include="$(MSBuildThisFileDirectory)Default.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <None Include="$(MSBuildThisFileDirectory)global.hlsli" />
