revised collision check

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -154,18 +154,19 @@
     <ClInclude Include="Animator.h" />
     <ClInclude Include="BaseRenderer.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="CircleCollider.h" />
     <ClInclude Include="Collider.h" />
-    <ClInclude Include="Collider2D.h" />
     <ClInclude Include="CollisionManager.h" />
     <ClInclude Include="Component.h" />
     <ClInclude Include="ComputeShader.h" />
     <ClInclude Include="ConstantBuffer.h" />
     <ClInclude Include="DarkLady.h" />
+    <ClInclude Include="DarkLadyEye.h" />
+    <ClInclude Include="DarkLadyWing.h" />
     <ClInclude Include="Device.h" />
     <ClInclude Include="EnginePch.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="EventManager.h" />
-    <ClInclude Include="ExpandingSimplex.h" />
     <ClInclude Include="FSM.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="Grid.h" />
@@ -197,6 +198,7 @@
     <ClInclude Include="PlayerRollState.h" />
     <ClInclude Include="PlayerState.h" />
     <ClInclude Include="PlayerSummonState.h" />
+    <ClInclude Include="RectCollider.h" />
     <ClInclude Include="RigidBody.h" />
     <ClInclude Include="Skill.h" />
     <ClInclude Include="SpriteRenderer.h" />
@@ -225,19 +227,20 @@
     <ClCompile Include="Animator.cpp" />
     <ClCompile Include="BaseRenderer.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="CircleCollider.cpp" />
     <ClCompile Include="Collider.cpp" />
-    <ClCompile Include="Collider2D.cpp" />
     <ClCompile Include="CollisionManager.cpp" />
     <ClCompile Include="Component.cpp" />
     <ClCompile Include="ComputeShader.cpp" />
     <ClCompile Include="ConstantBuffer.cpp" />
     <ClCompile Include="DarkLady.cpp" />
+    <ClCompile Include="DarkLadyEye.cpp" />
+    <ClCompile Include="DarkLadyWing.cpp" />
     <ClCompile Include="Device.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="EnginePch.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="EventManager.cpp" />
-    <ClCompile Include="ExpandingSimplex.cpp" />
     <ClCompile Include="FSM.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Grid.cpp" />
@@ -273,6 +276,7 @@
     <ClCompile Include="PlayerRollState.cpp" />
     <ClCompile Include="PlayerState.cpp" />
     <ClCompile Include="PlayerSummonState.cpp" />
+    <ClCompile Include="RectCollider.cpp" />
     <ClCompile Include="RigidBody.cpp" />
     <ClCompile Include="Skill.cpp" />
     <ClCompile Include="SpriteRenderer.cpp" />
