--- a/Client/imgui.ini
+++ b/Client/imgui.ini
@@ -4,7 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=145,260
+ViewportPos=1572,827
+ViewportId=0xE927CF2F
 Size=956,182
 Collapsed=0
 
