--- a/SYScript/SYScript.csproj
+++ b/SYScript/SYScript.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Camera.cs" />
+    <Compile Include="ObjectManager.cs" />
     <Compile Include="Skill.cs" />
     <Compile Include="Weapon.cs" />
     <Compile Include="Player.cs" />
