--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -142,6 +142,9 @@
     <Filter Include="Resource\Prefab">
       <UniqueIdentifier>{6ad10e62-5f62-4186-acd8-b0a4a953e92b}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Resource\Material">
+      <UniqueIdentifier>{52b35746-70ce-42c8-b350-ba2f7ff30eef}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Resource.cpp">
@@ -158,9 +161,6 @@
     </ClCompile>
     <ClCompile Include="Scene.cpp">
       <Filter>Scene</Filter>
-    </ClCompile>
-    <ClCompile Include="Resources.cpp">
-      <Filter>Resource</Filter>
     </ClCompile>
     <ClCompile Include="Input.cpp">
       <Filter>Utils\Input</Filter>
@@ -297,7 +297,15 @@
     <ClCompile Include="FileSystem.cpp">
       <Filter>FileSystem</Filter>
     </ClCompile>
-    <ClCompile Include="Prefab.cpp" />
+    <ClCompile Include="Resources.cpp">
+      <Filter>Resource</Filter>
+    </ClCompile>
+    <ClCompile Include="Material.cpp">
+      <Filter>Resource\Material</Filter>
+    </ClCompile>
+    <ClCompile Include="Prefab.cpp">
+      <Filter>Resource\Prefab</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Struct.h">
@@ -317,9 +325,6 @@
     </ClInclude>
     <ClInclude Include="Component.h">
       <Filter>Component</Filter>
-    </ClInclude>
-    <ClInclude Include="Resources.h">
-      <Filter>Resource</Filter>
     </ClInclude>
     <ClInclude Include="Input.h">
       <Filter>Utils\Input</Filter>
@@ -432,9 +437,6 @@
     <ClInclude Include="SyWindow.h">
       <Filter>Win32Window</Filter>
     </ClInclude>
-    <ClInclude Include="ScriptableEntity.h">
-      <Filter>Entity</Filter>
-    </ClInclude>
     <ClInclude Include="Camera.h">
       <Filter>Camera</Filter>
     </ClInclude>
@@ -492,7 +494,15 @@
     <ClInclude Include="FileSystem.h">
       <Filter>FileSystem</Filter>
     </ClInclude>
-    <ClInclude Include="Prefab.h" />
+    <ClInclude Include="Resources.h">
+      <Filter>Resource</Filter>
+    </ClInclude>
+    <ClInclude Include="Material.h">
+      <Filter>Resource\Material</Filter>
+    </ClInclude>
+    <ClInclude Include="Prefab.h">
+      <Filter>Resource\Prefab</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="SimpleMath.inl">
