--- a/Client/imgui.ini
+++ b/Client/imgui.ini
@@ -33,63 +33,63 @@ Collapsed=0
 
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1920,1080
+Size=1920,1368
 Collapsed=0
 
 [Window][Scene Hierarchy]
-Pos=0,24
-Size=416,524
+Pos=0,147
+Size=370,560
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Properties]
-Pos=0,550
-Size=416,530
+Pos=0,709
+Size=370,659
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Content Browser]
-Pos=1550,670
-Size=370,410
+Pos=1550,812
+Size=370,556
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Stats]
-Pos=1550,111
-Size=370,142
+Pos=1550,147
+Size=370,101
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Settings]
-Pos=1550,255
-Size=370,413
+Pos=1550,250
+Size=370,560
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Viewport]
-Pos=418,111
-Size=1130,969
+Pos=372,147
+Size=1176,1221
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][##toolbar]
-Pos=418,24
-Size=1502,85
+Pos=0,24
+Size=1920,121
 Collapsed=0
 DockId=0x0000000B,0
 
 [Docking][Data]
-DockSpace           ID=0x3BC79352 Window=0x4647B76E Pos=8,55 Size=1920,1056 Split=X
-  DockNode          ID=0x00000001 Parent=0x3BC79352 SizeRef=416,1056 Split=Y Selected=0x199AB496
-    DockNode        ID=0x00000007 Parent=0x00000001 SizeRef=369,524 Selected=0x2E9237F7
-    DockNode        ID=0x00000008 Parent=0x00000001 SizeRef=369,530 Selected=0x199AB496
-  DockNode          ID=0x00000006 Parent=0x3BC79352 SizeRef=1502,1056 Split=Y
-    DockNode        ID=0x0000000B Parent=0x00000006 SizeRef=1920,85 Selected=0xF0F70764
-    DockNode        ID=0x0000000C Parent=0x00000006 SizeRef=1920,969 Split=X
-      DockNode      ID=0x00000004 Parent=0x0000000C SizeRef=1130,1056 CentralNode=1 Selected=0x13926F0B
-      DockNode      ID=0x00000005 Parent=0x0000000C SizeRef=370,1056 Split=Y Selected=0x2E4EBCAA
-        DockNode    ID=0x00000009 Parent=0x00000005 SizeRef=370,146 Selected=0x2E4EBCAA
-        DockNode    ID=0x0000000A Parent=0x00000005 SizeRef=370,846 Split=Y Selected=0x54723243
+DockSpace           ID=0x3BC79352 Window=0x4647B76E Pos=8,55 Size=1920,1344 Split=Y
+  DockNode          ID=0x0000000B Parent=0x3BC79352 SizeRef=1920,121 Selected=0xF0F70764
+  DockNode          ID=0x0000000C Parent=0x3BC79352 SizeRef=1920,933 Split=X
+    DockNode        ID=0x00000001 Parent=0x0000000C SizeRef=370,1056 Split=Y Selected=0x199AB496
+      DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=369,428 Selected=0x2E9237F7
+      DockNode      ID=0x00000008 Parent=0x00000001 SizeRef=369,503 Selected=0x199AB496
+    DockNode        ID=0x00000006 Parent=0x0000000C SizeRef=1548,1056 Split=X
+      DockNode      ID=0x00000004 Parent=0x00000006 SizeRef=1176,1056 CentralNode=1 Selected=0x13926F0B
+      DockNode      ID=0x00000005 Parent=0x00000006 SizeRef=370,1056 Split=Y Selected=0x2E4EBCAA
+        DockNode    ID=0x00000009 Parent=0x00000005 SizeRef=370,77 Selected=0x2E4EBCAA
+        DockNode    ID=0x0000000A Parent=0x00000005 SizeRef=370,854 Split=Y Selected=0x54723243
           DockNode  ID=0x00000002 Parent=0x0000000A SizeRef=370,362 Selected=0x54723243
           DockNode  ID=0x00000003 Parent=0x0000000A SizeRef=370,360 Selected=0xBF096F38
 
