--- a/SHADER_SOURCE/SHADER_SOURCE.vcxitems.filters
+++ b/SHADER_SOURCE/SHADER_SOURCE.vcxitems.filters
@@ -6,7 +6,6 @@
     <FxCompile Include="$(MSBuildThisFileDirectory)Sprite.hlsl" />
     <FxCompile Include="$(MSBuildThisFileDirectory)TrailShader.hlsl" />
     <FxCompile Include="$(MSBuildThisFileDirectory)Rect.hlsl" />
-    <FxCompile Include="$(MSBuildThisFileDirectory)Default.hlsl" />
     <FxCompile Include="$(MSBuildThisFileDirectory)Particle.hlsl" />
     <FxCompile Include="$(MSBuildThisFileDirectory)ParticleCS.hlsl" />
     <FxCompile Include="$(MSBuildThisFileDirectory)Halo.hlsl" />
@@ -14,6 +13,7 @@
     <FxCompile Include="$(MSBuildThisFileDirectory)LaserShader.hlsl" />
     <FxCompile Include="$(MSBuildThisFileDirectory)GaugeShader.hlsl" />
     <FxCompile Include="$(MSBuildThisFileDirectory)UIShader.hlsl" />
+    <FxCompile Include="$(MSBuildThisFileDirectory)SlotShader.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <None Include="$(MSBuildThisFileDirectory)global.hlsli" />
