--- a/SYScript/SYScript.csproj
+++ b/SYScript/SYScript.csproj
@@ -42,12 +42,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccessoryData.cs" />
     <Compile Include="Camera.cs" />
+    <Compile Include="CostumeData.cs" />
+    <Compile Include="InventoryData.cs" />
+    <Compile Include="ItemData.cs" />
     <Compile Include="ObjectManager.cs" />
     <Compile Include="Skill.cs" />
+    <Compile Include="SpellData.cs" />
     <Compile Include="Weapon.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WeaponData.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ClassLibrary1\ScriptCore.csproj">
